@@ -9,6 +9,7 @@ INCOMPATIBLE CHANGES
   TEZ-2972. Avoid task rescheduling when a node turns unhealthy
 
 ALL CHANGES:
+  TEZ-1911. MergeManager's unconditionalReserve() should check for memory limits before allocating.
   TEZ-3141. mapreduce.task.timeout is not translated to container heartbeat timeout
   TEZ-3128. Avoid stopping containers on the AM shutdown thread.
   TEZ-3129. Tez task and task attempt UI needs application fails with NotFoundException
